Somali Language Support - Continued

--- a/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@using MODAMS.Utility;
+@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
 @model MODAMS.Models.ViewModels.Dto.AssetsDTO
 
 <div class="page-header">
     <div>
-        <h1 class="page-title">Assets</h1>
+        <h1 class="page-title">@Localizer["Assets"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
@@ -37,7 +41,7 @@
                         <div class="form-group pb-1 d-flex align-items-center">
                             <label asp-for="@Model.SubCategoryId" class="mr-2 mb-0" style="vertical-align: middle;">filter:</label>
                             <select asp-for="@Model.SubCategoryId" asp-items="@Model.CategorySelectList"
-                                    class="form-control select2 form-select">
+                            class="form-control select2 form-select">
                                 <option value="0">All Assets</option>
                             </select>
                         </div>
@@ -54,24 +58,24 @@
                 }
                 <div class="mb-2">
                     <a asp-area="Users" asp-controller="Assets" asp-action="CreateAsset"
-                       asp-route-id="@Model.StoreId"
-                       class="btn btn-info-gradient trShadow @sDisabled">
+                    asp-route-id="@Model.StoreId"
+                    class="btn btn-info-gradient trShadow @sDisabled">
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                        New Asset
+                        @Localizer["NewAsset"]
                     </a>
                 </div>
                 <div class="table-responsive export-table">
                     <table id="tblAssets" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
                         <thead class="bg-primary-gradient ms-auto divShadow">
                             <tr>
-                                <th class="text-white bg-transparent border-bottom-0 w-5" width="10%">S.No</th>
-                                <th class="text-white bg-transparent border-bottom-0">Category</th>
-                                <th class="text-white bg-transparent border-bottom-0">Make</th>
-                                <th class="text-white bg-transparent border-bottom-0">Model</th>
-                                <th class="text-white bg-transparent border-bottom-0">Asset Name</th>
-                                <th class="text-white bg-transparent border-bottom-0">Identification</th>
-                                <th class="text-white bg-transparent border-bottom-0">Status</th>
-                                <th class="text-white bg-transparent border-bottom-0 no-btn">Action</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-5" width="10%">@Localizer["SNo"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Category"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Make"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Model"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["AssetName"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Identification"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Status"]</th>
+                                <th class="text-white bg-transparent border-bottom-0 no-btn">@Localizer["Action"]</th>
                             </tr>
                         </thead>
                         <tbody class="table-body">
@@ -80,11 +84,17 @@
                                 string sCounter = "0";
                                 string sBackground = "primary";
                                 string sIdentification = "";
+                                var isSomali = CultureInfo.CurrentUICulture.Name == "so";
+                                var sCategoryName = "";
+
                                 foreach (var asset in Model.assets)
                                 {
                                     nCounter++;
                                     sCounter = (nCounter < 10) ? "0" + nCounter.ToString() : nCounter.ToString();
                                     sIdentification = asset.SubCategory.Category.CategoryName == "Vehicles" ? "Plate: " + asset.Plate : "SN: " + asset.SerialNo;
+
+                                    sCategoryName = isSomali ? asset.SubCategory.SubCategoryNameSo : asset.SubCategory.SubCategoryName;
+                                    
                                     switch (asset.AssetStatusId)
                                     {
                                         case SD.Asset_Available:
@@ -98,10 +108,9 @@
                                             break;
                                     }
 
-
                                     <tr>
                                         <td class="text-muted text-center fs-15 fw-semibold">@sCounter.</td>
-                                        <td class="text-muted fs-15 fw-semibold">@asset.SubCategory.SubCategoryName</td>
+                                        <td class="text-muted fs-15 fw-semibold">@sCategoryName</td>
                                         <td class="text-muted fs-15 fw-semibold">@asset.Make</td>
                                         <td class="text-muted fs-15 fw-semibold">@asset.Model</td>
                                         <td class="text-muted fs-15 fw-semibold">@asset.Name</td>
@@ -109,30 +118,30 @@
                                         <td class="text-muted fs-15 fw-semibold">
                                             <span class="text-@sBackground">
                                                 <span class="mb-0 mt-1 badge rounded-pill bg-@sBackground-transparent text-@sBackground">
-                                                    @asset.AssetStatus.StatusName
+                                                    @(isSomali ? asset.AssetStatus.StatusNameSo : asset.AssetStatus.StatusName)
                                                 </span>
                                             </span>
                                         </td>
                                         <td class="text-muted fs-15 fw-semibold">
                                             <div class="d-flex align-items-stretch">
-                                                <a asp-controller="Assets" asp-action="AssetInfo" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-info border me-2" data-bs-toggle="tooltip" data-bs-original-title="Asset Information">
+                                                <a asp-controller="Assets" asp-action="AssetInfo" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-info border me-2" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["AssetInformation"]">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
                                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                                                         <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
                                                     </svg>
                                                 </a>
-                                                <a asp-controller="Assets" asp-action="EditAsset" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-primary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="Edit Asset">
+                                                <a asp-controller="Assets" asp-action="EditAsset" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-primary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["EditAsset"]">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
                                                         <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
                                                     </svg>
                                                 </a>
-                                                <a asp-controller="Assets" asp-action="AssetDocuments" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-secondary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="Asset Documents">
+                                                <a asp-controller="Assets" asp-action="AssetDocuments" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-secondary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["AssetDocuments"]">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-file-pdf" viewBox="0 0 16 16">
                                                         <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z" />
                                                         <path d="M4.603 12.087a.81.81 0 0 1-.438-.42c-.195-.388-.13-.776.08-1.102.198-.307.526-.568.897-.787a7.68 7.68 0 0 1 1.482-.645 19.701 19.701 0 0 0 1.062-2.227 7.269 7.269 0 0 1-.43-1.295c-.086-.4-.119-.796-.046-1.136.075-.354.274-.672.65-.823.192-.077.4-.12.602-.077a.7.7 0 0 1 .477.365c.088.164.12.356.127.538.007.187-.012.395-.047.614-.084.51-.27 1.134-.52 1.794a10.954 10.954 0 0 0 .98 1.686 5.753 5.753 0 0 1 1.334.05c.364.065.734.195.96.465.12.144.193.32.2.518.007.192-.047.382-.138.563a1.04 1.04 0 0 1-.354.416.856.856 0 0 1-.51.138c-.331-.014-.654-.196-.933-.417a5.716 5.716 0 0 1-.911-.95 11.642 11.642 0 0 0-1.997.406 11.311 11.311 0 0 1-1.021 1.51c-.29.35-.608.655-.926.787a.793.793 0 0 1-.58.029zm1.379-1.901c-.166.076-.32.156-.459.238-.328.194-.541.383-.647.547-.094.145-.096.25-.04.361.01.022.02.036.026.044a.27.27 0 0 0 .035-.012c.137-.056.355-.235.635-.572a8.18 8.18 0 0 0 .45-.606zm1.64-1.33a12.647 12.647 0 0 1 1.01-.193 11.666 11.666 0 0 1-.51-.858 20.741 20.741 0 0 1-.5 1.05zm2.446.45c.15.162.296.3.435.41.24.19.407.253.498.256a.107.107 0 0 0 .07-.015.307.307 0 0 0 .094-.125.436.436 0 0 0 .059-.2.095.095 0 0 0-.026-.063c-.052-.062-.2-.152-.518-.209a3.881 3.881 0 0 0-.612-.053zM8.078 5.8a6.7 6.7 0 0 0 .2-.828c.031-.188.043-.343.038-.465a.613.613 0 0 0-.032-.198.517.517 0 0 0-.145.04c-.087.035-.158.106-.196.283-.04.192-.03.469.046.822.024.111.054.227.09.346z" />
                                                     </svg>
                                                 </a>
-                                                <a asp-controller="Assets" asp-action="AssetPictures" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-primary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="Asset Pictures">
+                                                <a asp-controller="Assets" asp-action="AssetPictures" asp-route-id="@asset.Id" class="btn btn-sm btn-outline-primary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["AssetPictures"]">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
                                                         <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                         <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z" />
@@ -151,7 +160,7 @@
                 <div class="row">
                     @*<hr class="customHR" />*@
                     <div class="col-sm-12">
-                        <a asp-action="StoreDetails" asp-controller="Stores" asp-route-id="@Model.StoreId" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                        <a asp-action="StoreDetails" asp-controller="Stores" asp-route-id="@Model.StoreId" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
                     </div>
 
                 </div>
